- fixed the issue where the assignment doesn't show up - fixed the UI where the font in the time entry form is too small
git-svn-id: https://svn.kuali.org/repos/kpme/trunk@764 6c5f4195-72ea-6250-e7e4-e498f552a5df

--- a/src/main/webapp/css/tk.css
+++ b/src/main/webapp/css/tk.css
@@ -197,7 +197,6 @@ select {
 	float:left;
 	width:100%;
 	/*margin: 20px 10px 0 1%;*/
-	font-size: .8em;
 	background-color: #FBF9EE;
 }
 
